--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "livecode-angular",
+  "name": "angular-pascal-9",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
